rebalance endpoint
* new migration
* added testify package
* mocked interfaces are created with mockery tool
