# internal/model/moex.go
@@ -1,0 +1,13 @@
+package model
+
+type (
+	MoexFindResult struct {
+		Stock
+		Err error
+	}
+
+	MoexPriceResult struct {
+		Price float64
+		Err   error
+	}
+)
