# internal/model/stock.go
@@ -4,34 +4,26 @@ import "time"
 
 type (
 	Stock struct {
-		Name      string
-		Code      string
-		GroupName string
-		Price     float64
-		Amount    int
+		Name      string  `json:"name"`
+		Code      string  `json:"code"`
+		GroupName string  `json:"group_name"`
+		Price     float64 `json:"price"`
+		LotAmount int     `json:"lot_amount"`
+		LotSize   int     `json:"lot_size"`
 	}
 
 	Transaction struct {
-		ProfileId int
-		StockCode string
-		Amount    int
-		Buying    bool
-		Price     float64
-		Time      time.Time
+		ProfileId int       `json:"profile_id"`
+		StockCode string    `json:"stock_code"`
+		LotAmount int       `json:"lot_amount"`
+		Buying    bool      `json:"buying"`
+		LotSize   int       `json:"lot_size"`
+		Price     float64   `json:"price"`
+		Time      time.Time `json:"time"`
 	}
 
 	FoundStock struct {
-		Stock
-		ErrMsg string
-	}
-
-	MoexFindResult struct {
-		Stock
-		Err error
-	}
-
-	MoexPriceResult struct {
-		Price float64
-		Err   error
+		Stock  `json:"stock"`
+		ErrMsg string `json:"err_msg"`
 	}
 )
